# MCP-security-auditor

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: security.yml
examples/: vulnerable_server.py
src/: cli.py  live_server.py  package_scanner.py  report.py  scanner.py  threats.py
tests/: test_threats.py
